--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Custom google pacman doodle : ">
+    <meta name="description" content="Custom google pacman doodle : n">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Vern14/Custom_Google_PacMan_Doodle">View on GitHub</a>
 
           <h1 id="project_title">Custom google pacman doodle</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">n</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Vern14/Custom_Google_PacMan_Doodle/zipball/master">Download this project as a .zip file</a>
