--- a/index.html
+++ b/index.html
@@ -1,79 +1,65 @@
-<!DOCTYPE html> 
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!--
+    @modifier: Vernon Zidana
+             : I added new styling and svg to the code 
+-->
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Custom google pacman doodle : n">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<body>
+<!-- My SVG logo-->
+ <h1 align="center"><i>VZ</i></h1> 
+<svg width="230" height="120">
+   <polygon points="10,60 140,18 90,40 70,60 106,98"
+   style="fill:orange;stroke:black;stroke-width:3;fill-rule:evenodd;" />
+</svg>
 
-    <title>Custom google pacman doodle</title>
-  </head>
 
-  <body>
+<div id ="pacmanbody">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Vern14/Custom_Google_PacMan_Doodle">View on GitHub</a>
+<!--Citation / original code: http://www.rustybrick.com/google-pacman-code.html-->
 
-          <h1 id="project_title">Custom google pacman doodle</h1>
-          <h2 id="project_tagline">n</h2>
+ <style>
+ body{ padding:10px; background: #080808;  }
+input{ padding:5px;  font-weight: bold; color: silver; background-color: black; border-radius: 2px; border:0px solid white;}
+input:hover{ font-weight: bold;color: white }
+#pacmanbody{position: fixed; margin-left:400px;  margin-top:40px; border:1px solid royalblue; background-color: royalblue;  }
+li:hover{color: white; background-color: rgba(255,255,255, 0.25);}
+p{background-color: rgba(255,255,255, 0.25); padding-left:50px; }
+h1{border-radius: 3px;  position: relative; width: 140px; top: 130px; left:75px;  }
+svg{background: white;}
+ </style>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Vern14/Custom_Google_PacMan_Doodle/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Vern14/Custom_Google_PacMan_Doodle/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+ </head>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+ <!-- textarea id=csi style=display:none>
+ </textarea -->
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+ <iframe name=wgjf style=display:none src="" onload="google.j.l()" onerror="google.j.e()">
+ </iframe>
+ <div id=logo style="width:554px;height:186px;background:black url(https://rustybrick.s3.amazonaws.com/pacman10-hp.png) 0 0 no-repeat;position:relative;margin-bottom:9px" title="PAC-MAN's 30th Birthday! Doodle with PAC-MANÙ & É±980 NAMCO BANDAI Games Inc.">
+ <div id="logo-l" style="width:200px;height:2px;left:177px;top:157px;background:#990;position:absolute;display:none;overflow:hidden">
+ <div id="logo-b" style="position:absolute;left:0;height:8px;width:0">
+ </div>
+ </div>
+ </div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+ <form action="/search" name=f onsubmit="google.fade=null">
+ <input type="hidden" name=q value="" size=57 style="">
+ <input name=btnI type=submit value="Play PacMan" class=lsb onclick="this.checked=1">
+ </form>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<div id=xjsd>
+ </div>
+ <div id=xjsi>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+ </div>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<script src="script.js"></script>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Custom google pacman doodle maintained by <a href="https://github.com/Vern14">Vern14</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
