--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     @modifier: Vernon Zidana
              : I added new styling and svg to the code 
 -->
-
+ <style>
+ body{ padding:10px; 	-webkit-box-shadow: 0 8px 6px -6px #C4C4C4;
+	   -moz-box-shadow: 0 8px 6px -6px #C4C4C4; background: white;
+	        box-shadow: 0 8px 6px -6px 	#C4C4C4; bottom:100px; position: relative; width:100%; left:-27.9px;}
+input{ padding:5px;  font-weight: bold; color: silver; background-color: black; border-radius: 2px; border:0px solid white;}
+input:hover{ font-weight: bold;color: white }
+#pacmanbody{position: fixed; margin-left:400px;  margin-top:40px; width:40.5%; border:1px solid royalblue; background-color: royalblue; }
+li:hover{color: white; background-color: rgba(255,255,255, 0.25);}
+p{background-color: rgba(255,255,255, 0.25); padding-left:50px; }
+h1{border-radius: 3px;  position: relative; width: 10%; top: 130px; left:95px;  }
+svg{background: ite; position: relative; left:20px; }
+#footer{position: fixed; -webkit-box-shadow: 0 8px 6px -6px #C4C4C4;
+	   -moz-box-shadow: 0 8px 6px -6px #C4C4C4;
+	        box-shadow: 0 8px 6px -6px 	#C4C4C4;height: 40px; width:100%; left:0px; top:550px;}
+ </style>
 
 <body>
+
+
 <!-- My SVG logo-->
  <h1 align="center"><i>VZ</i></h1> 
+
 <svg width="230" height="120">
    <polygon points="10,60 140,18 90,40 70,60 106,98"
    style="fill:orange;stroke:black;stroke-width:3;fill-rule:evenodd;" />
@@ -19,19 +36,7 @@
 
 <!--Citation / original code: http://www.rustybrick.com/google-pacman-code.html-->
 
- <style>
- body{ padding:10px; background: #080808;  }
-input{ padding:5px;  font-weight: bold; color: silver; background-color: black; border-radius: 2px; border:0px solid white;}
-input:hover{ font-weight: bold;color: white }
-#pacmanbody{position: fixed; margin-left:400px;  margin-top:40px; border:1px solid royalblue; background-color: royalblue; }
-li:hover{color: white; background-color: rgba(255,255,255, 0.25);}
-p{background-color: rgba(255,255,255, 0.25); padding-left:50px; }
-h1{border-radius: 3px;  position: relative; width: 140px; top: 130px; left:75px;  }
-svg{background: white;}
- </style>
 
-
- </head>
 
  <!-- textarea id=csi style=display:none>
  </textarea -->
@@ -50,16 +55,18 @@ svg{background: white;}
  <input name=btnI type=submit value="Play PacMan" class=lsb onclick="this.checked=1">
  </form>
 
-<div id=xjsd>
- </div>
- <div id=xjsi>
 
- </div>
 
 
 <script src="script.js"></script>
 
 </div>
 
+
 </body>
+
+
+<div id="ooter">
+
+</div>
 </html>
